# google-cli-tools

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
etc/: client_secrets.json  drive_setting.yaml
google-cli-tools/: main.py  tools.py
google-cli-tools/calendar/: __init__.py  main.py
google-cli-tools/drive/: document.txt  main.py
google-cli-tools/gmail/: main.py
google-cli-tools/maps/: main.py
google-cli-tools/translate/: main.py
