[metadata]
name = google-cli-tools
version = 0.1
summary = google-cli-tools
description-file = README.rst
license = GNU GPL
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: Plugins
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU GPL
    Operating System :: POSIX :: Linux
author = mivanov